deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: igeraweb
  labels:
    app: igeraweb
spec:
  selector:
    matchLabels:
      app: igeraweb
  template:
    spec:
      containers:
      - name: igeraweb
        image: todelay/igeraweb:${TAG}
        ports:
          - containerPort: 8080
