deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: igeraweb
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: igeraweb
