deployment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: igeraweb-ingress
spec:
  rules:
  - http:
      paths:
      - path: /default/igeraweb
        pathType: Prefix
        backend:
          service:
            name: igeraweb
            port: 
              number: 8080
